Add test coverage for SonarQube

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,49 +1,42 @@
 # Cache downloaded dependencies and plugins between builds.
-
 # Not strictly necessary, but speeds up the builds.
-
 cache:
-
+  
   key: "$CI_JOB_NAME"
 
   paths:
-
     # Must be within the repository under test hence we can't use the
-
     # default ~/.m2
-
     - .m2/repository
 
 variables:
-
   # Use the cached directory above.
-
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
 
 
+sonarqube:
+  image: usommerl/maven-javafx # docker image with Maven + JavaFX
+
+  before_script:
+    - . setup-mvn-proxy.sh
+    - cat ~/.m2/settings.xml
+
+  script:
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent compile --global-settings settings.xml sonar:sonar clean
 
 junit:
 
   image: usommerl/maven-javafx # docker image with Maven + JavaFX
-
   # alternative: use image: maven and 'apt install openjfx' in
-
   # before_script.
 
   before_script:
-
     # The runners on the forge need a proxy to access the web. mvn
-
     # ignores the $http_proxy & friends variable => write a
-
     # configuration file that does this for us.
-
     - . setup-mvn-proxy.sh
-
     # Useful only for debugging
-
     - cat ~/.m2/settings.xml
 
   script:
-    - mvn compile --global-settings settings.xml sonar:sonar clean
     - mvn test --batch-mode
