--- a/pom.xml
+++ b/pom.xml
@@ -52,14 +52,24 @@
 				<version>1.5.0</version>
 				<executions>
 					<execution>
+						<id>client</id>
 						<goals>
 							<goal>java</goal>
 						</goals>
+						<configuration>
+							<mainClass>fr.univ_lyon1.info.m1.poneymon_fx.App</mainClass>
+						</configuration>
+					</execution>
+					<execution>
+						<id>server</id>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<mainClass>fr.univ_lyon1.info.m1.poneymon_fx.network.server.MainServer</mainClass>
+						</configuration>
 					</execution>
 				</executions>
-				<configuration>
-					<mainClass>fr.univ_lyon1.info.m1.poneymon_fx.App</mainClass>
-				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
